updated the files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>Utkarsh Salunke's portfolio</h1> 
-        <h2>I'm a Web and RPA Developer</h2>
+        <h2>I'm a RPA Developer</h2>
+        <h2>and I'm on journey to be a Fullstack webdeveloper</h2>
 
         <hr />
 
