--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,13 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Utkarsh</h1>
 <h2>My top 3 movies of all-time.</h2>
+
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+
+<h3>Need for Speed (2014)</h3>
+<p>A street racer embarks on a cross-country journey of revenge and redemption after being framed for a crime.</p>
+
+<h3>The Shawshank Redemption (1994)</h3>
+<p>An innocent man forms an enduring bond with a fellow inmate as he navigates hope and perseverance in a harsh prison.</p>
+
+<h3>Weathering With You (2019)</h3>
+<p>A romance about a boy and a girl with the power to control the weather.</p>
