--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <hr />
 
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project" />
+        <img src="./assets/images/best movies.png" height="200" alt="movie ranking project" />
 
         <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-        <img src="./assets/images/birthday-invite.png" height="200" alt="Purple birthday cake" />
+        <img src="./assets/images/birthday.png" height="200" alt="Purple birthday cake" />
 
         <hr />
 
